--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "angular-hotkeys",
-  "author": "Wes Cruver",
-  "version": "1.6.0",
+  "name": "angular-hotkeys-trigger",
+  "author": ["Wes Cruver","Moataz Abdallh(Trigger Method)"],
+  "version": "1.6.1",
   "license": "MIT",
-  "description": "Automatic keyboard shortcuts for your Angular Apps",
-  "homepage": "https://chieffancypants.github.io/angular-hotkeys",
-  "main": "build/hotkeys.js",
+  "description": "Automatic keyboard shortcuts for your Angular Apps with trigger method "main": "build/hotkeys.js",
   "keywords": [
     "angular",
     "angularjs",
@@ -15,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/chieffancypants/angular-hotkeys.git"
+    "url": "git://github.com/mo3taz-abdallh/angular-hotkeys"
   },
   "bugs": {
     "url": "https://github.com/chieffancypants/angular-hotkeys/issues"
